28 August 2018: Ralph
	- Disable minimal-responses in ipsecmod unit tests.
	- Added serve-expired-ttl and serve-expired-ttl-reset options.

27 August 2018: Wouter
	- Set defaults to yes for a number of options to increase speed and
	  resilience of the server.  The so-reuseport, harden-below-nxdomain,
	  and minimal-responses options are enabled by default.  They used
	  to be disabled by default, waiting to make sure they worked.  They
	  are enabled by default now, and can be disabled explicitly by
	  setting them to "no" in the unbound.conf config file.  The reuseport
	  and minimal options increases speed of the server, and should be
	  otherwise harmless.  The harden-below-nxdomain option works well
	  together with the recently default enabled qname minimisation, this
	  causes more fetches to use information from the cache.
	- next release is called 1.8.0.
	- Fix lintflags for lint on FreeBSD.

22 August 2018: George
	- #4140: Expose repinfo (comm_reply) to the inplace_callbacks. This
	  gives access to reply information for the client's communication
	  point when the callback is called before the mesh state (modules).
	  Changes to C and Python's inplace_callback signatures were also
	  necessary.

21 August 2018: Wouter
	- log-local-actions: yes option for unbound.conf that logs all the
	  local zone actions, a patch from Saksham Manchanda (Secure64).
	- #4146: num.query.subnet and num.query.subnet_cache counters.
	- Fix only misc failure from log-servfail when val-log-level is not
	  enabled.

17 August 2018: Ralph
	- Fix classification for QTYPE=CNAME queries when QNAME minimisation is
 	  enabled.

17 August 2018: Wouter
	- Set libunbound to increase current, because the libunbound change
	  to the event callback function signature.  That needs programs,
	  that use it, to recompile against the new header definition.
	- print servfail info to log as error.
	- added more servfail printout statements, to the iterator.